tests/paczka1/fuzzy1/96289059.err
Error in line 1: QN7dt S256 42,6
Error in line 4: QN7dt A481 62,4
Error in line 3: 1m2P4AvtIF A348 11,8
Error in line 23: A481 A31 25,9
Error in line 13: QN7dt A348 56,5
Error in line 24: A481 A481 82,4
Error in line 28: A481 A31 -1,1
Error in line 26: QN7dt A31 25,3
Error in line 21: 1m2P4AvtIF A348 97,9
Error in line 18: mTdsrz7 A31 59,8
Error in line 36: 1m2P4AvtIF S256 47,0
